--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.38.2",
     "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
