--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.10.0",
+    "@ffmpeg/ffmpeg": "^0.10.1",
     "fluent-ffmpeg": "^2.1.2",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-select": "^4.3.1",
-    "sass": "^1.38.2",
+    "sass": "^1.39.0",
+    "uuid": "^8.3.2",
     "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
